generic service options